# grpc-example

./: .gitignore  CMakeLists.txt  install-grpc.sh
.devcontainer/: Dockerfile  devcontainer.json
certs/: ca-cert.pem  ca-key.pem  server-key.pem  server-req.pem
src/auth_service_lib_cpp/: AuthMetadataProcessorFactory.cpp  AuthMetadataProcessorFactory.h  AuthNService.cpp  AuthNService.h  AuthNServiceAuthMetadataProcessor.cpp  AuthNServiceAuthMetadataProcessor.h  AuthNServiceFactory.cpp  AuthNServiceFactory.h  CMakeLists.txt  IAuthNService.h  RunAuthServer.cpp  RunAuthServer.h
src/auth_service_lib_cpp/protos/: auth.proto
src/bar_cpp/: CMakeLists.txt  main.cpp
src/order_handler_lib_cpp/: .gitignore  CMakeLists.txt  IOrderHandler.h  OrderHandler-config.cmake.in  OrderHandler.cpp  OrderHandler.h  OrderHandlerConfig.cmake  OrderServiceImpl.cpp  OrderServiceImpl.h  OrderState.h  RunClient.cpp  RunServer.cpp  RunServer.h
src/order_handler_lib_cpp/protos/: compile_protos.sh  helloworld.proto  orderservice.proto
src/order_terminal_cpp/: CMakeLists.txt  RunClient.cpp  RunClient.h  main.cpp
